syntax = "proto3";

package go.micro.api.dcmgr;

service DcMgrApi {
//    Get gets a DataCenter by ID
    rpc Get(ID) returns (DataCenter) {
    }

    rpc Add(DataCenter) returns (Response) {
    }

    rpc Update(DataCenter) returns (Response) {
    }
}

message ID {
    int64 id = 1;
}

message All {
}

// DataCenterList request message
message Request {
    string user_token = 1; // List task for the account
}

message DataCenter {
    int64  id = 1;  // datacenter id
    string name = 2; // datacenter name
    int32 status = 3; // 0: enable, 1: disable
}

message Response {
}

